static support enabled